--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
       <button id="start" class="inline-block px-6 py-3 text-white bg-blue-600 rounded-lg">Comenzar</button>
       <button id="demo" class="inline-block px-6 py-3 border border-gray-300 text-gray-700 rounded-lg dark:border-gray-600 dark:text-white">Ver demo</button>
     </div>
+     <div id="container-03" class="max-w-md md:max-w-xl mx-auto bg-white p-4 mt-8 shadow">
+      <p>Este contenedor tiene <b>max-w-md</b> por defecto y <b>md:max-w-xl</b> desde el breakpoint <b>md</b> (768px).</p>
+      
+    </div>
+     <div id="container-04" class="grid grid-cols-2 gap-4 md:grid-cols-4 mt-8">
+      <div class="bg-blue-100 p-4">Elemento 1</div>
+      <div class="bg-blue-200 p-4">Elemento 2</div>
+      <div class="bg-blue-300 p-4">Elemento 3</div>
+      <div class="bg-blue-400 p-4">Elemento 4</div>
+    </div>
   </div>
 </main>
   </body>
