--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Vite App 
+      /title>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
 
   </head>
   <body>
@@ -18,17 +21,17 @@
       <button id="start" class="inline-block px-6 py-3 text-white bg-blue-600 rounded-lg">Comenzar</button>
       <button id="demo" class="inline-block px-6 py-3 border border-gray-300 text-gray-700 rounded-lg dark:border-gray-600 dark:text-white">Ver demo</button>
     </div>
-     <div id="container-03" class="max-w-md md:max-w-xl mx-auto bg-white p-4 mt-8 shadow">
-      <p>Este contenedor tiene <b>max-w-md</b> por defecto y <b>md:max-w-xl</b> desde el breakpoint <b>md</b> (768px).</p>
-      
-    </div>
-     <div id="container-04" class="grid grid-cols-2 gap-4 md:grid-cols-4 mt-8">
-      <div class="bg-blue-100 p-4">Elemento 1</div>
-      <div class="bg-blue-200 p-4">Elemento 2</div>
-      <div class="bg-blue-300 p-4">Elemento 3</div>
-      <div class="bg-blue-400 p-4">Elemento 4</div>
-    </div>
   </div>
+   <section class="bg-white dark:bg-gray-900">
+     <div id="container-03" class="px-4 py-8 mx-auto max-w-md md:max-w-xl">
+             <div id="container-04" class="grid grid-cols-2 gap-4 md:grid-cols-4">             <img src="https://placehold.co/50" alt="Imagen 1" class="w-full h-auto rounded">
+             <img src="https://placehold.co/50" alt="Imagen 2" class="w-full h-auto rounded">
+             <img src="https://placehold.co/50" alt="Imagen 3" class="w-full h-auto rounded">
+             <img src="https://placehold.co/50" alt="Imagen 4" class="w-full h-auto rounded">
+         </div>
+     </div>
+ </section>
+ 
 </main>
   </body>
 </html>
