--- a/index.html
+++ b/index.html
@@ -97,8 +97,12 @@
       href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css"
     />
     <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
+    
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 
-    <link rel="stylesheet" href="./assets/css/main.css" />
+
+
   </head>
   <body>
     <!-- Page loading -->
